# greenlight

./: .dockerignore  .gitignore  Dockerfile
.github/workflows/: ci.yml
backend/: pyproject.toml  seed.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/ai/: analyzer.py  client.py  mediator.py  suggester.py  summarizer.py
backend/app/mcp/: server.py
backend/app/models/: __init__.py  analysis.py  approval.py  comment.py  draft.py  group.py  idea.py  notification.py  problem.py  session.py  user.py  waitlist.py
backend/app/routers/: ai.py  analysis.py  auth.py  challenges.py  comments.py  drafts.py  groups.py  ideas.py  notifications.py  problems.py  sessions.py  teams.py  waitlist.py
backend/app/services/: analysis_runner.py  auth.py  clerk_auth.py  email.py  notifications.py  sse.py
backend/tests/: conftest.py  test_ai_modules.py  test_ai_router.py  test_analysis.py  test_analysis_runner.py  test_auth.py  test_auth_extended.py  test_challenges_extended.py  test_comments.py  test_drafts.py  test_email_service.py  test_groups.py  test_ideas.py  test_notifications.py  test_problems.py  test_services.py  test_sessions.py  test_teams_extended.py  test_waitlist.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AISuggestButton.tsx  AddIdeaForm.tsx  AnalysisPanel.tsx  AnalysisProgress.tsx  ChallengeCard.tsx  CommentThread.tsx  CreateChallengeModal.tsx  CreateProblemModal.tsx  DraftPanel.tsx  GroupSetup.tsx  (+7 more)
(+6 files in other folders)
